# advent_of_code_2021

./: CMakeLists.txt  README.md  day1.h  day10.h  day11.h  day11_opti.h  day12.h  day12_opti.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day2.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  macro.h  main.cpp
